layers filename capitalized

--- a/P000048.opf/layers/v001/BookTitle.yml
+++ b/P000048.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 70825f48d92d48b8aa667226e04397c0
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
