--- a/P000048.opf/layers/v001/Chapter.yml
+++ b/P000048.opf/layers/v001/Chapter.yml
@@ -1,5 +1,5 @@
 id: 010d0411d9e544eb8cec0b8632d4637f
-annotation_type: chapter_title
+annotation_type: Chapter
 revision: '00001'
 annotations:
 - id: 066db25c7c72404d94798ee95f75e195
