--- a/P000048.opf/layers/v001/Sabche.yml
+++ b/P000048.opf/layers/v001/Sabche.yml
@@ -1,5 +1,5 @@
 id: cff90453e4fc423e99e01f58fc33a96b
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: cedf9b4b1a024c1abf0137acb97ba8ed
