layers filename capitalized

--- a/P000048.opf/layers/v001/Quotation.yml
+++ b/P000048.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: 06a8f2ce8ec64b9d93bab9ef6d853f40
-annotation_type: Tsawa
+annotation_type: Quotation
 revision: '00001'
 annotations:
   a69f87429a004c70b6396435234e0943:
